Get fluent working

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
+  <h1>This is an h1</h1>
   <script>
     window.__REACT_DEVTOOLS_GLOBAL_HOOK__ = { isDisabled: true }
   </script>
